# vulkan_voxels

./: '  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  0  2  CMakeLists.txt  README.md  a.out  test.cpp
app/: CMakeLists.txt  ChunkMeshManager.cpp  ChunkMeshManager.hpp  EAssert.cpp  EAssert.hpp  GPUBufferAllocator.hpp  MemUsage.hpp  Pool.hpp  RingBuffer.hpp  StagingBufferPool.cpp  StagingBufferPool.hpp  Stats.hpp  TaskPool.hpp  Util.cpp  Util.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp  main.cpp  pch.hpp
app/voxels/: Chunk.cpp  Chunk.hpp  Common.hpp  Frustum.cpp  Frustum.hpp  Grid3D.hpp  Mask.hpp  Mesh.hpp  Mesher.cpp  Mesher.hpp  Octree.cpp  Octree.hpp  Terrain.cpp  Terrain.hpp  Types.hpp  VoxelWorld.cpp  VoxelWorld.hpp
engine/: CMakeLists.txt  pch.hpp
engine/application/: CVar.cpp  CVar.hpp  Camera.cpp  Camera.hpp  Config.hpp  ImageData.hpp  Input.hpp  Renderer.cpp  Renderer.hpp  StringUtil.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  Util.cpp  Util.hpp  Window.cpp  Window.hpp
engine/tvk/: Barrier.cpp  Barrier.hpp  CMakeLists.txt  DeletionQueue.cpp  DeletionQueue.hpp  Descriptors.cpp  Descriptors.hpp  Error.cpp  Error.hpp  ImGuiUtil.cpp  ImGuiUtil.hpp  Image.cpp  Image.hpp  Initializers.cpp  Initializers.hpp  Pipeline.cpp  Pipeline.hpp  Resource.cpp  Resource.hpp  SamplerCache.cpp  SamplerCache.hpp  Shader.cpp  Shader.hpp  ShaderWatcher.cpp  ShaderWatcher.hpp  Swapchain.cpp  Swapchain.hpp  Types.hpp  Util.cpp  Util.hpp  pch.hpp
resources/shaders/: common.h.glsl  math.h.glsl  scene_data.h.glsl
resources/shaders/voxels/: chunk.frag.glsl  chunk.vert.glsl  chunk_cull.comp.glsl  raymarch_voxel.comp.glsl
